# beauty-finder

./: .gitignore  Cargo.toml  README.md
src/: crawler.rs  main.rs
test_data/: detail.html  site_map.html
