[package]
name = "beauty-finder"
version = "0.1.0"
authors = ["xiangxu <xiangxu@innotechx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxml = "0.2.14"
reqwest = { version = "0.10", features = ["blocking","json"] }
tokio = { version = "0.2", features = ["full"] }
failure = "0.1"
urlparse = "0.7"
lazy_static = "1.4.0"